# nim-mmcif

./: .gitignore  MANIFEST.in  README.md  build_nim.py  conftest.py  hatch_build.py  mmcif.nimble  nim_mmcif.nim  pyproject.toml  setup.py  test_hatch_build.sh  update_version.py  verify_dll.py
.github/workflows/: build-wheel.yml  build.yml  python-publish.yml  test-wheels.yml  test.yml  wheels.yml
nim_mmcif/: .gitignore  __init__.py  _version.py  mmcif.nim  nim_mmcif.nim  nim_mmcif.nim.cfg  nim_mmcif.nimble
python_wrapper/: __init__.py  mmcif.py
src/: mmcif.nim  python_bindings.nim
tests/: test  test.nim  test_python_bindings.py  test_readme_nim  test_readme_python.py  test_tokenizer
